# personal_bible_study_backend

./: db.sqlite3  pyproject.toml
config/: settings.py
note/: api_views.py  models.py  urls.py  views.py
note/migrations/: 0001_initial.py
pbs_app/: pyproject.toml
user/: models.py
user/migrations/: 0001_initial.py
