[tool.poetry]
name = "pbs-app"
version = "0.1.0"
description = ""
authors = ["sungho baek <ashsh0412@gmail.com>"]
readme = "README.md"
packages = [{include = "pbs_app"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
